--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Parapsychology -- Fiction'
 - !lcsh 'Short stories'
 - !lcsh 'Science fiction'
+- GITenberg
 title: Second Sight
 url: http://www.gutenberg.org/ebooks/22997
